tests/typing/fail/redef-01.stderr
error: variable `hello` is defined twice
 --> tests/typing/fail/redef-01.rs:8:9
  |
8 |         hello : int = hello;
  |         ^^^^^
  |
help: the variable was previously defined here
 --> tests/typing/fail/redef-01.rs:6:14
  |
6 |     node oui(hello: int) = (hello)
  |              ^^^^^
